src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Is_Converted__c</fullName>
        <formula>Contact.acf_Lead__r.IsConverted</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIs_Password_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Password Reset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfPassword_Modified_Date__c</fullName>
        <label>Password Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>acfWork_Experience__c</fullName>
        <label>Work Experience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsersPB</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Phone Broker Team</value>
        </filters>
        <label>Active Users - Phone Broker</label>
    </listViews>
    <listViews>
        <fullName>Active_ACF_Staff_no_partner_brokers</fullName>
        <booleanFilter>1 AND 2 and 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Analytics,community,Premier Support User,External API User</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>notContain</operation>
            <value>partner</value>
        </filters>
        <label>Active ACF Staff - no partner brokers</label>
    </listViews>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>community</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>partner</value>
        </filters>
        <label>Active Users</label>
        <sharedTo>
            <role>Executive_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Users_Admin</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Super</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <label>Active Users - Admin</label>
        <sharedTo>
            <role>Executive_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <columns>CORE.USERS.FAX</columns>
        <columns>CORE.USERS.CELL</columns>
        <columns>CORE.USERS.ADDRESS_STREET</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.STATE_CODE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Click_Loans_Team</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Click Loans Team</value>
        </filters>
        <label>Click Loans Team</label>
    </listViews>
    <listViews>
        <fullName>Non_Community_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>DELEGATED_APPROVER</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>partner,community</value>
        </filters>
        <label>Non Community Users</label>
    </listViews>
    <listViews>
        <fullName>PartnerUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Customize Partner User</value>
        </filters>
        <label>Partner Portal Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>